minor spacing fixes to header (added padding)+Changed font to Roboto

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: "Roboto", monospace;
 }
 
 header{
@@ -21,6 +22,7 @@ header{
 .nav{
     font-size: 18px;
     color: #E5E7EB;
+    padding-top: 10px;
 }
 .boxes {
     display:flex;
@@ -65,4 +67,5 @@ footer{
     padding-left: 5%;
     padding-right: 0;
     margin-right: 0;
+    padding-top: 10px;
 }
